fix btn dark mode style

--- a/src/style/darkMode.scss
+++ b/src/style/darkMode.scss
@@ -104,7 +104,7 @@
     background-color: var(--primary-dark);
   }
 
-  .dark .btn {
+  .btn {
     border: 1px solid var(--primary-light);
 
     &-dark {
